--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-midPoint 3.1 "Sinan"
----------------------
+midPoint 3.1.1 "Sinan Update 1"
+-------------------------------
 
 General informations:
 
